# RMCV

./: LICENSE  README.md  cascade_effect.txt
PhotoToVideo/: excited.cpp
ScreenShot/: CMakeLists.txt  excited.cpp
TM_tracking/: CMakeLists.txt  main.cpp
Test/: CMakeCache.txt  CMakeLists.txt  Makefile  cascade3.xml  cascade4.xml  cmake_install.cmake  example.cpp  minarea  minarea.cpp  opencv_traincascade
board_detect/: .boarddetect.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  boarddetect  boarddetect.cpp  cascade1.xml  cascade2.xml  cmake_install.cmake
camshift/: CMakeLists.txt  main.cpp  readme.txt
cascade&cnn/: fuck.cpp
cascade_visualisation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  visualisation
cascade_visualisation/data/: model_visualization.avi
choose_color/: CMakeLists.txt  choose_color.cpp
serial_debug/: receive.py
serial_debug/serial_class/: CMakeLists.txt  main.cpp  serial.cpp  serial.h
serial_debug/serialtest/: main  main.cpp  main_old.cpp  makefile  readme.txt  serial.cpp  serial.h
